maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not found: value abiscuit
			if (abiscuit(i,j)){
                            ^