maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
var BiscuitX=0
var BiscuitY=0



override def run() {
	chercherBiscuit
	setIndication(BiscuitX,BiscuitY,0)
}

def chercherBiscuit(){
	for(i<-0 to getMondeLargeur-1){
		for(j<-0 to getMondeLargeur-1){
			if (abiscuit(i,j)){
				BiscuitX=i
				BiscuitY=j
			}
		}
	}
}

